refactor(place) : 불변toList사용 및 @Vaild추가